<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                    android:id="@+id/btn_back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="50dp"
                    android:src="@drawable/abc_vector_test"
                    android:background="@color/colorPrimary"
                    tools:ignore="RtlSymmetry"/>

            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="20">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/title_summary"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

            <!-- Amount Entered -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorPrimaryLight"
                    android:weightSum="10">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:padding="20dp"
                        android:text="@string/title_amount_entered"/>


                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:textAlignment="textEnd"
                            android:textSize="20sp"
                            android:text="$"/>

                    <TextView
                            android:id="@+id/tv_amount_entered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:padding="20dp"
                            android:textSize="20sp"
                            android:text="0"/>

                </LinearLayout>


            </LinearLayout>

            <!-- Payment Method Selected -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/payment_method"
                        android:padding="20dp"/>

                <TextView
                        android:id="@+id/tv_payment_method_selected"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"
                        android:text="Metodo elegido"
                        android:padding="20dp"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/line_separator_dotted"/>

            <!-- Card Issuer Selected -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/card_issuers"
                        android:padding="20dp"/>

                <TextView
                        android:id="@+id/tv_card_issuer_selected"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"
                        android:text="Banco elegido"
                        android:padding="20dp"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/line_separator_dotted"/>

            <!-- Installment Selected -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/installments"
                        android:padding="20dp"/>

                <TextView
                        android:id="@+id/tv_payer_cost_selected"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"
                        android:text="Cuota elegida"
                        android:padding="20dp"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/line_separator_dotted"/>

        </LinearLayout>

        <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginTop="18dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="18dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/btn_pay"
                android:background="@drawable/border_radius_blue_button"
                android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>