<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                    android:id="@+id/btn_back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="50dp"
                    android:src="@drawable/abc_vector_test"
                    android:background="@color/colorPrimary"/>

            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="20.5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/title_choose_payment_method"/>

        <View
                android:id="@+id/separator_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15">

            <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/colorAccent"
                    android:indeterminate="true" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_payment_method_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </RelativeLayout>


        <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="18dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="18dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/button_continue"
                android:background="@drawable/border_radius_blue_button"
                android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>